--- a/css/styles.css
+++ b/css/styles.css
@@ -158,7 +158,7 @@ font-family: "Verdana", "Times New Roman", serif;
     margin-left: 0;
     padding-left: 0;
     font-family: "Verdana", "Times New Roman", serif;
-    list-style: disc;
+    list-style: none;
 }
 
 .Autre{
